--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -458,9 +458,9 @@
 
     <!-- OTG devices -->
     <string name="usb">USB</string>
-    <string name="usb_detected">You seem to have an USB device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
-    <string name="confirm_usb_storage_access_text">Пожалуйста, выберите корневую папку USB-устройства на следующем экране, чтобы предоставить к нему доступ.</string>
-    <string name="wrong_root_selected_usb">Выбрана неправильная папка. Выберите корневую папку вашего USB-устройства.</string>
+    <string name="usb_detected">Похоже, к вашему устройству подключён USB-накопитель. Необходимо убедиться, что его файлы отображаются правильно, для этого необходимо предоставить дополнительные разрешения.</string>
+    <string name="confirm_usb_storage_access_text">Пожалуйста, выберите корневую папку USB-накопителя на следующем экране, чтобы предоставить к нему доступ.</string>
+    <string name="wrong_root_selected_usb">Выбрана неправильная папка. Выберите корневую папку вашего USB-накопителя.</string>
 
     <!-- Dates -->
     <string name="january">Январь</string>
